# grantfin

./: .gitignore  LICENSE  README.md  answers.toml.example  org_profile.example.toml  pyproject.toml  vault_policy.example.toml
grant_scout/: __init__.py  __main__.py  answers.py  cli.py  csv_export.py  dedupe.py  format.py  models.py  profile.py  scrape.py  server.py  store.py
grant_scout/apply/: __init__.py  browser.py  filler.py  gate.py
grant_scout/funders/: __init__.py  base.py  propublica.py  three_sixty_giving.py
grant_scout/secrets/: __init__.py  registry.py  resolver.py  vault.py
grant_scout/sources/: __init__.py  base.py  eu_sedia.py  grants_gov.py  simpler.py
tests/: test_apply.py  test_apply_live.py  test_csv_export.py  test_dedupe.py  test_eu_sedia.py  test_format.py  test_funders.py  test_grants_gov.py  test_models.py  test_profile.py  test_scan.py  test_scrape.py  test_secrets.py  test_simpler.py  test_store.py  test_three_sixty_giving.py
tests/fixtures/: apply_form.html  eu_grants.json  fetch_334326.json  propublica_literacy.json  search2_education.json  simpler_search.json  threesixty_orgs.json
