[project]
name = "grant-scout"
version = "0.1.0"
description = "Grant discovery agent for nonprofits, usable directly inside Claude Code via MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastmcp>=2.0",
    "beautifulsoup4>=4.12",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
grant-scout = "grant_scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grant_scout"]

[tool.pytest.ini_options]
markers = [
    "live: tests that hit real network endpoints (deselect with -m 'not live')",
    "browser: tests that drive the real agent-browser CLI (need Node + Chrome)",
]
